# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]

2020-03-22 Melvin Gagarao <https://github.com/216469637-gagarao-melvin>
### Added
- Title to the JFrame
- changelog.txt
- Icon on the JFrame
- Set the JFrame to spawn in the middle of the screen
- Element class to hold text content, location, and styling

2020-03-24 Ahmad Faruqi

##Added Functionality
- Color label functionality
- Drag Drop Functional (no Ghost item yet) 

2020-03-25 Ahmad Faruqi

## Added
Drag Labels now support drag and drop!
- Labels are able to be dragged and dropped
- Text Containers within Venn Diagram Tool can receive info from selected text area

2020-03-25 Ahmad Faruqi
- Removed Unnecessary classes
- Updated UI
- Fixed Drag Labels not Auto-Adjusting
- Drag Labels cursor centered
- HTML Tags Used to Format Labels

2020-03-27 Melvin Gagarao
- Formatted spacing as a psuedo commit